# fink

./: .gitignore  CHANGELOG.md  CHANGELOG_v0.1.31.md  Cargo.toml  LICENSE  README.md  fink.1  generate_test_prompts.sh  rename_to_fink.sh  todo.md
.github/workflows/: ci.yml  release.yml
homebrew/: README.md  fink.rb
src/: lib.rs  main.rs
src/application/: app.rs  application.rs  mod.rs  models.rs  (+3 more)
tests/: app_test.rs  application_models_test.rs  application_update_tags_test.rs  build_combine_test.rs  build_mode_integration_test.rs  build_mode_test.rs  cli_commands_test.rs  cli_manage_flag_test.rs  cli_test.rs  clipboard_integration_test.rs  clipboard_prefix_postfix_test.rs  comprehensive_unicode_test.rs  config_mode_test.rs  config_system_test.rs  create_dialog_error_handling_test.rs  create_dialog_integration_test.rs  create_dialog_test.rs  create_dialog_type_selection_test.rs  create_dialog_vim_navigation_test.rs  create_from_clipboard_test.rs  default_prompts_initialization_test.rs  directory_structure_reorganization_test.rs  empty_list_error_persistence_test.rs  empty_prompt_list_handling_test.rs  enhanced_default_prompts_test.rs  external_editor_test.rs  first_launch_initialization_test.rs  global_ctrl_c_exit_test.rs  input_text_scrolling_test.rs  integration_app_test.rs  integration_clipboard_test.rs  integration_runner_test.rs  integration_test.rs  interactive_build_test.rs  korean_input_handling_test.rs  main_initialization_test.rs  main_test.rs  multi_tag_filtering_test.rs  presentation_cli_commands_test.rs  presentation_cli_test.rs  (+28 more)
tldr/: fink.md
(+52 files in other folders)
